--- a/seeting.ini
+++ b/seeting.ini
@@ -38,12 +38,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🚀🇨🇳 国内手切`select`(中国|国内|上海|湖南|深圳|北京|内蒙古|湖南)
+custom_proxy_group=🚀🇨🇳 国内手切`select`(中国|国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南)
 custom_proxy_group=🎯 国内免流`select`[]♻️🇨🇳 国内节点`[]🚀 节点选择`[]🚀🇨🇳 国内手切`[]DIRECT
-custom_proxy_group=♻️🇨🇳 国内节点`url-test`(中国|国内|上海|湖南|深圳|北京|内蒙古|湖南)`http://www.gstatic.com/generate_204`300,,1
-custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(中国|国内|上海|湖南|深圳|北京|内蒙古|湖南|Music|music|网易云|music|𝐌𝐮𝐬𝐢𝐜|Unbolck|网易云|云音乐|Music|Netease|🎶|解锁网易云)).*)`http://www.gstatic.com/generate_204`300,,1
+custom_proxy_group=♻️🇨🇳 国内节点`url-test`(中国|国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南)`http://www.gstatic.com/generate_204`300,,1
+custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(中国|国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南Music|music|网易云|music|𝐌𝐮𝐬𝐢𝐜|Unbolck|网易云|云音乐|Music|Netease|🎶|解锁网易云)).*)`http://www.gstatic.com/generate_204`300,,1
 custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(中国|国内|湖南|上海)).*)`http://www.gstatic.com/generate_204`300,,1
-custom_proxy_group=🔮 负载均衡`load-balance`(^(?!.*(中国|国内|上海|湖南|深圳|北京|内蒙古|湖南|Music|music|网易云|music|𝐌𝐮𝐬𝐢𝐜|Unbolck|网易云|云音乐|Music|Netease|🎶|解锁网易云)).*)`http://www.gstatic.com/generate_204`300,1
+custom_proxy_group=🔮 负载均衡`load-balance`(^(?!.*(中国|国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南Music|music|网易云|music|𝐌𝐮𝐬𝐢𝐜|Unbolck|网易云|云音乐|Music|Netease|🎶|解锁网易云)).*)`http://www.gstatic.com/generate_204`300,1
 custom_proxy_group=🇨🇳 国内购物`select`[]♻️🇨🇳 国内节点`[]🚀🇨🇳 国内手切`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
@@ -59,7 +59,7 @@ custom_proxy_group=🎮 游戏平台`select`[]♻️🇨🇳 国内节点`[]🚀
 custom_proxy_group=🎶 网易音乐`select`[]♻️🇨🇳 国内节点`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,1
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong|新加坡|台湾)`http://www.gstatic.com/generate_204`300,,1
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,1
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,11
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓|春川)`http://www.gstatic.com/generate_204`300,,1
