--- a/seeting.ini
+++ b/seeting.ini
@@ -41,7 +41,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 全部节点`select`.*
-custom_proxy_group=🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
+custom_proxy_group=🚀 节点选择`[]🇨🇳 国内手切`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
 custom_proxy_group=🇨🇳 国内手切`select`(中国|国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南|呼和浩特)
 custom_proxy_group=🎯 国内免流`select`[]🚀 节点选择`[]🇨🇳 国内手切`[]DIRECT
 custom_proxy_group=🇨🇳 国内购物`select`[]🇨🇳 国内手切`[]🚀 全部节点`[]DIRECT
