--- a/seeting.ini
+++ b/seeting.ini
@@ -1,3 +1,32 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@1208005448 
+1208005448
+/
+Clash
+Public
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+Clash/seeting.ini
+@1208005448
+1208005448 Update seeting.ini
+Latest commit 3360a5f 2 minutes ago
+ History
+ 1 contributor
+72 lines (68 sloc)  7.75 KB
+
 ;设置规则标志位
 ruleset=🎯 国内免流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 国内免流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -41,24 +70,23 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 全部节点`select`.*
-custom_proxy_group=🚀 节点选择`[]🇨🇳 国内手切`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
 custom_proxy_group=🇨🇳 国内手切`select`(中国|国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南|呼和浩特)
-custom_proxy_group=🎯 国内免流`select`[]🚀 节点选择`[]🇨🇳 国内手切`[]DIRECT
+custom_proxy_group=🎯 国内免流`select`[]🇨🇳 国内手切`[]DIRECT
 custom_proxy_group=🇨🇳 国内购物`select`[]🇨🇳 国内手切`[]🚀 全部节点`[]DIRECT
 custom_proxy_group=🚀 Speedtest`select`[]🇨🇳 国内手切`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🇨🇳 国内手切`[]🇭🇰 香港节点`[]🚀 全部节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]🇨🇳 国内手切`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🚀 全部节点
 custom_proxy_group=🇺🇳 国外网站`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
-custom_proxy_group=🎶 网易云音乐`select`[]🇨🇳 国内手切`[]🚀 节点选择
+custom_proxy_group=📢 谷歌服务`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
+custom_proxy_group=🍎 苹果服务`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
+custom_proxy_group=🎮 游戏平台`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
+custom_proxy_group=🎶 网易云音乐`select`[]🇨🇳 国内手切`[]🚀 全部节点
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong|台湾)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日|JP|Japan)
 custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
