--- a/seeting.ini
+++ b/seeting.ini
@@ -38,6 +38,7 @@ ruleset=🇨🇳 国内节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🇨🇳 国内节点,[]GEOIP,CN
 ruleset=🚀 Speedtest,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Speedtest/Speedtest.list
+ruleset=🐧 Tencent,https://raw.githubusercontent.com/1208005448/Clash/main/Tencent.list
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
@@ -50,6 +51,7 @@ custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓|春
 custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|Singapore|狮城)
 custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🇨🇳 国内购物`select`[]🇨🇳 国内节点`[]🚀 全部节点`[]DIRECT
+custom_proxy_group=🐧 Tencent`select`[]🇨🇳 国内节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🚀 全部节点
 custom_proxy_group=🚀 Speedtest`select`[]🇨🇳 国内节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🚀 全部节点`[]DIRECT
