--- a/seeting.ini
+++ b/seeting.ini
@@ -25,8 +25,8 @@ ruleset=🇺🇳 国外免流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇺🇳 国外免流,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/Proxy.list
 
 ;Netflix
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/1208005448/Clash/main/Netflix.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
+ruleset=🇺🇳 国外免流,https://raw.githubusercontent.com/1208005448/Clash/main/Netflix.list
+ruleset=🇺🇳 国外免流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
 
 ;广告拦截
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -58,7 +58,6 @@ custom_proxy_group=🇨🇳 国内免流`select`(中国|国内|上海|湖南|深
 custom_proxy_group=🇺🇳 国外免流`select`(港|HK|Hong Kong|台湾|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日|JP|Japan|KR|Korea|KOR|首尔|韩|韓|春川|新加坡|Singapore|狮城)
 custom_proxy_group=🚀 Speedtest`select`[]🇨🇳 国内免流`[]🇺🇳 国外免流`[]🚀 全部节点
 custom_proxy_group=🐟 漏网之鱼`select`[]🇨🇳 国内免流`[]🇺🇳 国外免流`[]🚀 全部节点
-custom_proxy_group=🎥 Netflix`select`(Netflix|HKT|奈飞|网飞|解锁|流媒体)`[]🇺🇳 国外免流
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🇨🇳 国内免流`[]🇺🇳 国外免流`[]🚀 全部节点
 
 ;设置分组标志位
