--- a/seeting.ini
+++ b/seeting.ini
@@ -53,12 +53,12 @@ ruleset=🚀 Speedtest,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
-custom_proxy_group=🇨🇳 国内免流`select`DIRECT`[]♻️🇨🇳 国内自动`(中国|🇨🇳｜联通｜移动｜电信｜国内|上海|湖南|深圳|北京|天津|重庆|成都|内蒙古|镇江|石家庄|宁夏|沈阳|济南|呼和浩特|江苏|湖北|武汉|陕西|太原|广西|南昌|南宁|苏州|杭州|贵州|广州|四川)`[]🚀 全部节点
+custom_proxy_group=🇨🇳 国内免流`select`DIRECT`[]♻️🇨🇳 国内自动`(中国|🇨🇳|联通|移动|电信|国内|上海|湖南|深圳|北京|天津|重庆|成都|内蒙古|镇江|石家庄|宁夏|沈阳|济南|呼和浩特|江苏|湖北|武汉|陕西|太原|广西|南昌|南宁|苏州|杭州|贵州|广州|四川)`[]🚀 全部节点
 custom_proxy_group=🇺🇳 国外免流`select`[]♻️🇨🇳 国外自动`(港|HK|Hong Kong|台湾|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日|JP|Japan|KR|Korea|KOR|首尔|韩|韓|春川|新加坡|Singapore|狮城)`[]🚀 全部节点
 custom_proxy_group=🚀 Speedtest`select`[]🇨🇳 国内免流`[]🇺🇳 国外免流`[]🚀 全部节点
 custom_proxy_group=🐟 漏网之鱼`select`[]♻️🇨🇳 国内自动`[]♻️🇨🇳 国外自动`[]🇨🇳 国内免流`[]🇺🇳 国外免流`[]🚀 全部节点
 custom_proxy_group=🚀 全部节点`select`.*
-custom_proxy_group=♻️🇨🇳 国内自动`url-test`(中国|🇨🇳｜联通｜移动｜电信｜国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南|呼和浩特|江苏|湖北|广西|四川)`http://www.gstatic.com/generate_204`300,,1
+custom_proxy_group=♻️🇨🇳 国内自动`url-test`(中国|🇨🇳|联通|移动|电信|国内|上海|湖南|深圳|北京|内蒙古|镇江|石家庄|宁夏|济南|呼和浩特|江苏|湖北|广西|四川)`http://www.gstatic.com/generate_204`300,,1
 custom_proxy_group=♻️🇨🇳 国外自动`url-test`(国际|国外|隧道|韩国|加拿大|印度|港|HK|Hong Kong|台湾|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日|JP|Japan|KR|Korea|KOR|首尔|韩|韓|春川|新加坡|Singapore|狮城)`http://www.gstatic.com/generate_204`300,,1
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🇨🇳 国内免流`[]🇺🇳 国外免流
 
